<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
android:background="@color/new_color_code_extra_light_blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/text_view_1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/text_name_1"
            android:textColor="#fff"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_marginTop="75dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        >


        <Button
            android:id="@+id/button_1"
            android:text="@string/button_name_1"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:background="@drawable/button_style"
            android:textColor="#000"
            />
        <Button
            android:id="@+id/button_2"
            android:text="@string/button_name_2"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:background="@drawable/button_style_2"
            android:textColor="#fff"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/text_view_2"
            android:layout_width="wrap_content"
            android:layout_height="35dp "
            android:text="@string/text_name_2"
            android:textColor="#fff"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        android:layout_gravity="center"
        >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_gravity="start"
        >

        <TextView
            android:id="@+id/text_view_3"
            android:layout_width="50dp"
            android:layout_height="30dp "
            android:text="@string/text_name_3"
            android:textColor="#fff"
            android:textAlignment="viewEnd"
            android:layout_marginRight="10dp"
            android:textSize="14dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/edit_text_view_1"
            android:background="@drawable/edit_text_001"
            android:layout_width="220sp"
            android:layout_height="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="20dp"

        android:layout_gravity="start"

        >

        <TextView
            android:id="@+id/text_view_4"
            android:layout_width="50dp"
            android:layout_height="30dp "
            android:text="@string/text_name_4"
            android:textColor="#fff"
            android:textAlignment="viewEnd"
            android:layout_marginRight="10dp"
            android:textSize="14dp"
            android:textStyle="bold"
            />
        <EditText
            android:background="@drawable/edit_text_001"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            />



            <Button
                android:id="@+id/button_3"
                android:text="@string/text_name_5"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/new_button_style_001"
                android:textColor="#fff"
                />
            <Button
                android:id="@+id/button_4"
                android:text="@string/text_name_6"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:textAllCaps="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textStyle="bold"
                android:background="@drawable/new_button_stle_002"
                android:textColor="#000"
                />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="start"
        >
        <TextView
            android:id="@+id/text_view_5"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/text_name_7"
            android:textAlignment="viewEnd"
            android:textColor="#fff"
            android:layout_marginRight="10dp"
            android:textSize="14dp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/button_5"
            android:text="@string/text_name_8"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:textAllCaps="false"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textStyle="bold"
            android:background="@drawable/new_button_style_001"
            android:textColor="#fff"
            />
        <Button
            android:id="@+id/button_6"
            android:text="@string/text_name_9"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@drawable/new_button_stle_002"
            android:textColor="#000"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="start"
        >

        <TextView
            android:id="@+id/text_view_6"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/text_name_10"
            android:textColor="#fff"
            android:textAlignment="viewEnd"
            android:layout_marginRight="10dp"
            android:textSize="14dp"
            android:textStyle="bold"
            />
        <EditText
            android:background="@drawable/edit_text_001"
            android:layout_width="220sp"
            android:layout_height="30dp"/>/>
    </LinearLayout>
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
       >


        <Button
            android:id="@+id/button_7"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_style_002"
            android:text="@string/text_name_11"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18dp"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>